--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>소드 강화 게임 - 실시간 랭킹</title>
+    <title>[1.0]소드 강화 게임 by.s̵̮͇͂̃a̶̯̮̣̍͒̋ņġ_ř?ą</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -124,7 +124,7 @@
         <p>텅장(소지금): <span id="money">0</span> 원</p>
         <p>강화비용: <span id="enhanceCost">100</span> 원</p>
         <button class="gameControl" onclick="enhanceSword()">강화!!!</button>
-        <button class="gameControl" onclick="sellSword()">소드 판매하기</button>
+        <button class="gameControl" onclick="sellSword()">소드 illegal판매하기</button>
         <h3>🏆랭킹🏆</h3>
         <pre id="rankingBox"></pre>
     </div>
@@ -139,7 +139,7 @@
         <hr style="margin:12px 0;">
         <p>현재 레벨: <span id="currentLevelInfo">0</span></p>
         <p>텅장(소지금): <span id="moneyInfo">0</span> 원</p>
-        <p id="protectStatus">강화 보호 아이템: 없음</p>
+        <p id="protectStatus">87세 김미시 할머니의 최후의 갑옷: 없음</p>
     </div>
 
     <!-- 상점 -->
